--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li class="link">References</li>
     <li class="link">My work</li>
     <li class="link">My Favorite Book</li>
-    <li class="link">Contact</li>
+    <li class="link">Insperation</li>
 </ul>
 
 
@@ -47,8 +47,18 @@
             <h1> My Favorite Book </h1>
             <div class="line"></div>
             <br>
-            <a href="https://en.wikipedia.org/wiki/Harry_Potter#The_Wizarding_World_of_Harry_Potter" target="_blank">Click here to reveal the best book of all time</a>
+            <a href="https://en.wikipedia.org/wiki/Harry_Potter#The_Wizarding_World_of_Harry_Potter" target="_blank"> Click here to reveal the best book of all time</a>
         </section>
+        <section id="Insperation">
+        <h1> My Insperation </h1>
+        <div class="line"></div>
+        <a href="https://www.jkrowling.com/" target="_blank">
+        <img src="download.jpeg">
+        </a>
+        <a href="https://en.wikipedia.org/wiki/Harry_Potter_(film_series)" target="_blank">
+        <img src="download%20director.jpeg">
+        </a>
+    </section>
 </body>
 
 </html>
